# seed

./: Cargo.toml  Justfile  LICENCE  README.md  build.Dockerfile  build.rs  comment_style.yaml  dock.yaml
docs/: features.md
src/: ast.rs  lexer.rs  main.rs  parser.lalrpop
src/builtins/: fns.rs  mod.rs  type_functions.rs  type_methods.rs
src/eval/: bind.rs  builtins.rs  error.rs  mod.rs  scope.rs  value.rs
src/lexer/: mod.rs  scanner.rs
tests/: test.rs
tests/stdout/: builtin_type_functions.test  features.test  functions.test  functions_combinations.test  hello_world.test  if_else.test  indexing.test  lex_errors.xtest  lexical_scopes.xtest  loops.test  mod.rs  multi_lines.test  objects.test  operations.test  operations_combinations.test  parse_errors.xtest  print.test  returns.test  runtime_errors.xtest  stacktrace.xtest  strings.test  this_functions.test  type_functions.test  variables.test  variables_combinations.test
